--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
-        <p>Esto es un parrafo</p>    
+        <div id="container">
+            <div id="post">
+                <h1>Aqui vamos a hacer un blogpost</h1>
+                <p>Esto es un parrafo</p>    
+            </div>
+        </div>
+        
     </body>
 </html>
