--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <div id="container">
+            <div id="cabecera">
+                Aqui inicia la cabecera
+            </div>
             <div id="post">
                 <h1>Aqui vamos a hacer un blogpost</h1>
                 <p>Esto es un parrafo</p>    
