Finalizada la cabecera azul

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Aqui inicia la cabecera
+                Blog de Blog
             </div>
             <div id="post">
                 <h1>Aqui vamos a hacer un blogpost</h1>
