--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         <div id="container">
             <div id="post">
                 <h1>Aqui vamos a hacer un blogpost</h1>
-                <p>Esto es un parrafo</p>    
+                <p>Esto es un parrafo</p>
+                <p>Esto es un parrafo adicional</p>
             </div>
         </div>
         
