--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                 <p>Esto es un parrafo</p>
                 <p>Esto es un parrafo adicional</p>
             </div>
+            <div>Grafica</div>
         </div>
         
     </body>
