--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Blog de Blog
+                Blog de Maestro
             </div>
             <div id="post">
                 <h1>Aqui vamos a hacer un blogpost</h1>
@@ -14,6 +14,9 @@
                 <p>Esto es un parrafo adicional</p>
             </div>
             <div>Grafica</div>
+
+
+            <div>Huele horrible</div>
         </div>
         
     </body>
