--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title> Titulo</title>
+        <title> Titulo Nuevo</title>
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
