--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
     <head>
         <title> Titulo Nuevo</title>
         <link rel="stylesheet" href="css/estilos.css">
+        <meta charset="UTF-8">
     </head>
     <body>
         <div id="container">
             <div id="cabecera">
+                <img id="logo" src="imagenes/dragon.png">
                 Blog de Cabecera
             </div>
             <div id="post">
